css/main.css
/* ... */
.dropdown-toggle::after{
    margin-left: .5em;
    vertical-align: .2em;
}
#account-dropdown .dropdown-toggle::after{
    display: none;
}
#account-dropdown .dropdown-toggle.loaded::after{
    display: inherit;
}

a.navbar-brand img{
    height: 42px;
}

#readonly-icon{
    position: relative;
    min-width: 36px !important;
    max-width: 36px !important;
    width: 36px;
    min-height: 32px !important;
    max-height: 32px !important;
    height: 32px;
    margin-left: 20px;
}

#sizeIndicator, #update {
    position: relative;
    min-width: 32px !important;
    max-width: 32px !important;
    width: 32px;
    min-height: 32px !important;
    max-height: 32px !important;
    height: 32px;
    margin-left: 20px;
}

#update img {
    position: absolute;
    top: 0px;
    left: 0px;
    opacity: 0;
    transition-duration: 1s;    
    transition-property: opacity;
}

#update.pending img#icon-pending {
    opacity: 1;
}
#update.saving img#icon-saving {
    opacity: 1;
}
  
.navbar-dark .navbar-nav .show>.nav-link{
    color: #f6ad6e;
}
.dropdown-item.active, .dropdown-item:active{
    background-color: white;
}

.hidden {
    display: none;
}

.navbar-dark .navbar-text.owner {
	color: white;
}

.owner {
	white-space: nowrap;
}

/*---------------------------------------------------------*/
/*-------------------------tree----------------------------*/
/*---------------------------------------------------------*/

#ztree {
    text-overflow: ellipsis;
    position: absolute;
    left: 0px;
    width: 25%;
    top: 0px;
    bottom: 0px;
    overflow-y: auto;
    padding: 30px 20px 20px 10px;
}
#ztree.ab-closed {
    padding: 0px;
}
#ztree.tree-solo {
	overflow-x: auto;
}


.ztree *{
    font-size: 15px;
}
.ztree li{
    line-height:inherit;
}
.ztree li a {
    height: 32px;
    color: black !important;
    padding: 0px;
}
.ztree li a:hover {
    color: black;
}

.ztree li a.curSelectedNode {
    position: relative;
    height: 32px;
    background-color: inherit;
    font-weight: bold;
    border: none;
}
.ztree li a.curSelectedNode:before{
    content: "";
    position: absolute;
    width: 4px;
    background-color: #dd6600;
    top: 4px;
    left: -8px;
    height: 24px;
}

.ztree li a.curSelectedNode_Edit {
    height: 32px;
    background-color:inherit;
    border: none;
    color: black;
}
.ztree li a.tmpTargetNode_inner {  
    height: 32px;
    padding-right: 6px;
    background-color:#aaaaac46;
    border:none;
}


.ztree li a input.rename {
    height:26px;
    font-size: inherit;
    width:inherit;
    border:1px rgb(49, 49, 49) solid; *border:0px
}
.ztree li span {
    vertical-align: middle !important;
    line-height:32px;
}


/*tree icons*/
.ztree li span.button {
    width:20px; 
    height:20px;
    margin-left: 2px;
    background-size: contain;
    background-image: none;
    background-attachment: inherit;
}

.ztree li a.level0 span.button.ico_open, .ztree li a.level0 span.button.ico_close, .ztree li span.button.ico_open, .ztree li span.button.ico_close, .ztree li span.button.ico_docu {
    margin-right: 3px;
}

.ztree li a.level0 span.button.ico_docu {
    background-position: inherit;
    background-image:url("../img/icons/home-opened.svg"); *background-image:url("../img/icons/home-opened.svg");
}
.ztree li a.level0 span.button.ico_open {
    background-position: inherit;
    background-image:url("../img/icons/home-opened.svg"); *background-image:url("../img/icons/home-opened.svg");
}
.ztree li a.level0 span.button.ico_close {
    background-position: inherit;
    background-image:url("../img/icons/home-closed.svg"); *background-image:url("../img/icons/home-closed.svg");
}
.ztree li span.button.ico_open {
    background-position: inherit;
    background-image:url("../img/icons/folder-open-colored.svg"); *background-image:url("../img/icons/folder-open-colored.svg");
}
.ztree li span.button.ico_close {
    background-position: inherit;
    background-image:url("../img/icons/folder-colored.svg"); *background-image:url("../img/icons/folder-colored.svg");
}
.ztree li span.button.ico_docu {
    background-position: inherit;
    background-image:url("../img/icons/file.svg"); *background-image:url("../img/icons/file.svg");
}

.ztree li span.button.add {
    margin-right:2px;
    margin-left: 12px;
    background-image:url("../img/icons/plus-bold.svg"); *background-image:url("../img/icons/plus-bold.svg");
}
.ztree li span.button.edit {
    background-position: inherit;
    background-image:url("../img/icons/edit.svg"); *background-image:url("../img/icons/edit.svg");
}
.ztree li span.button.remove {
    background-position: inherit;
    background-image:url("../img/icons/trash.svg"); *background-image:url("../img/icons/trash.svg");
}

/*dragging*/
span.tmpzTreeMove_arrow { 
    width:20px; 
    height:20px;
    background-attachment: inherit;
    background-size: contain;
    background-position: inherit;
    background-image:url("../img/icons/arrow-right.svg"); *background-image:url("../img/icons/arrow-right.svg")
}
ul.ztree.zTreeDragUL { 
    background-color: #ffd9bc;
    color: black;
    border: 2px black dotted;
    padding-left: 6px;
    padding-right: 8px;
    z-index: 1100;
}
ul.tmpTargetzTree {
    background-color: inherit;
}


/*---------------------------------------------------------*/
/*-------------------------splitter------------------------*/
/*---------------------------------------------------------*/

#splitter {
    cursor: col-resize;
    border-left: 1px solid;
    border-color: #b0b0b0;
    position: absolute;
    width: 12px;
    top: 0px;
    bottom: 0px;
    margin: 20px 0px;
    display: block;
}

#splitter.ab-closed {
    border-style: none;
    cursor: auto;
    width: 22px;
}

#splitter.thin {
    width: 0px;
    padding: 0px;
}

:not(.small-device).touch-device #splitter {
	width: 40px;
}
/* ... */

